Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-2377

Fix leak in libevent's version EventLoop::delay

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • 0.22.0
    • 0.22.0
    • libprocess
    • Mesosphere Q1 Sprint 3 - 2/20, Mesosphere Q1 Sprint 4 - 3/6

    Description

      I was finally able to verify the delay event is leaking through massif.
      Easy fix. Patch coming soon.

      Attachments

        Activity

          People

            jvanremoortere Joris Van Remoortere
            jvanremoortere Joris Van Remoortere
            Benjamin Hindman Benjamin Hindman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: