MESOS-2377: Fix leak in libevent EventLoop::handle_delay.

Review: https://reviews.apache.org/r/31218